--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1054</width>
-    <height>720</height>
+    <height>817</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -111,7 +111,7 @@
       <x>0</x>
       <y>100</y>
       <width>511</width>
-      <height>541</height>
+      <height>641</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -149,7 +149,7 @@
        <x>10</x>
        <y>440</y>
        <width>491</width>
-       <height>81</height>
+       <height>191</height>
       </rect>
      </property>
     </widget>
@@ -587,7 +587,20 @@
      </rect>
     </property>
     <property name="text">
-     <string>SF</string>
+     <string>SF 1</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButtonSF2">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>600</y>
+      <width>80</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>SF 2</string>
     </property>
    </widget>
   </widget>
